--- a/DroidconBoston/DroidconBoston/Base.lproj/Main.storyboard
+++ b/DroidconBoston/DroidconBoston/Base.lproj/Main.storyboard
@@ -161,6 +161,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Social Feed" id="cBv-Tw-Viw"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="b2P-9w-6YU">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="25q-be-1av" eventType="valueChanged" id="8Fd-EZ-njB"/>
+                        </connections>
+                    </refreshControl>
                     <connections>
                         <outlet property="tableView" destination="LTH-Zw-Nb9" id="fAL-Wo-fvU"/>
                     </connections>
